--- a/Examen2_11711057JosephMoscoso/nbproject/project.properties
+++ b/Examen2_11711057JosephMoscoso/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Examen2_11711057JosephMoscoso.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Joseph\\Documents\\Progra II Master Race\\jcalendar-1.42\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=examen2_11711057josephmoscoso.Examen2_11711057JosephMoscoso
+main.class=examen2_11711057josephmoscoso.principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
